syntax = "proto3";

package proto;

option go_package = "/proto";

message AccountInfoRequest { string account_id = 1; }
message AccountInfoResponse {
  // 账户类型 0:个人 1:企业
  int32 accountType = 1;
  // 余额
  double balance = 2;
  // 个人用户信息
  oneof userInfo {
    CustomerUserInfo customerUserInfo = 3;
    EnterpriseUserInfo enterpriseUserInfo = 4;
  }
}
message CustomerUserInfo {
  // 账户ID
  string accountID = 1;
  // 姓名
  string name = 2;
  // 邮箱
  string email = 3;
  // 电话
  string phone = 4;
}
message EnterpriseUserInfo {
  // 账户ID
  string accountID = 1;
  // 企业名称
  string name = 2;
  // 企业社会信用代码
  string creditCode = 3;
  // 法人姓名
  string legalName = 4;
  // 电话
  string phone = 5;
  // 邮箱
  string email = 6;
}
message QueryAccountBalanceRequest { string account_id = 1; }
message QueryAccountBalanceResponse {
  string account_id = 1;
  double balance = 2;
}

message DeductBalanceRequest {
  string account_id = 1;
  double amount = 2;
}
message DeductBalanceResponse {
  string account_id = 1;
  double balance = 2;
}

message AddBalanceRequest {
  string account_id = 1;
  double amount = 2;
}
message AddBalanceResponse {
  string account_id = 1;
  double balance = 2;
}

service Account {
  rpc GetAccountInfo(AccountInfoRequest) returns (AccountInfoResponse);
  rpc QueryAccountBalance(QueryAccountBalanceRequest)
      returns (QueryAccountBalanceResponse);

  rpc DeductBalance(DeductBalanceRequest) returns (DeductBalanceResponse);
  rpc AddBalance(AddBalanceRequest) returns (AddBalanceResponse);
}
